[workspace]
resolver = "2"
members = [
    "core",
    "actix-web-grants",
    "proc-macro",
    "rocket-grants",
    "poem-grants",
]

[workspace.package]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
categories = ["authentication"]
homepage = "https://github.com/DDtKey/protect-endpoints"
repository = "https://github.com/DDtKey/protect-endpoints"
authors = ["DDtKey <ddttkey@gmail.com>"]

[workspace.dependencies]
protect-endpoints-proc-macro = { path = "proc-macro", version = "0.2.0" }
protect-endpoints-core = { path = "core" }
