[workspace]
resolver = "2"
members = [
    "core",
    "proc-macro",
    "actix-web-grants",
    "protect-axum",
    "poem-grants",
    "rocket-grants",
]

[workspace.package]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
categories = ["authentication"]
homepage = "https://github.com/DDtKey/protect-endpoints"
repository = "https://github.com/DDtKey/protect-endpoints"
authors = ["DDtKey <ddttkey@gmail.com>"]

[workspace.dependencies]
protect-endpoints-proc-macro = { path = "proc-macro", version = "0.3.1" }
protect-endpoints-core = { path = "core", version = "0.1.1" }
