[package]
name = "actix-web-grants"
version = "4.1.1"
description = "Authorization extension `actix-web` to protect your endpoints"
readme = "README.md"
keywords = ["actix", "auth", "security", "grants", "permissions"]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "actix_web_grants"
path = "src/lib.rs"

[features]
default = ["macro-check"]
macro-check = ["protect-endpoints-proc-macro"]

[dependencies]
actix-web = { version = "4.3", default-features = false, features = ["macros"] }
protect-endpoints-proc-macro = { workspace = true, features = ["actix-web"], optional = true }

[dev-dependencies]
actix-web-httpauth = "0.8.0"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
parse-display = "0.9.0"
jsonwebtoken = "9.1.0"
chrono = "0.4.19"
