[package]
name = "poem-grants"
version = "1.0.0"
description = "Authorization extension for `poem` to protect your endpoints"
readme = "README.md"
keywords = ["poem", "authz", "security", "grants", "permissions"]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "poem_grants"
path = "src/lib.rs"

[features]
default = ["macro-check"]
macro-check = ["protect-endpoints-proc-macro"]

[dependencies]
poem = "1"
protect-endpoints-proc-macro = { workspace = true, features = ["poem"], optional = true }
thiserror = "1"

[dev-dependencies]
poem = {version = "1", features = ["test"]}
poem-openapi = "2.0.26"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.34.0", features = ["rt-multi-thread"]}
