[package]
name = "protect-endpoints-proc-macro"
version = "0.1.0"
description = "A proc-macro way to protect your endpoints"
readme = "../README.md"
keywords = ["rocket", "authz", "security", "grants", "permissions"]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
rocket = []
actix-web = []
poem = []

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0"
quote = "1"
syn = { version = "2.0", features = ["full", "derive", "extra-traits"] }

[dev-dependencies]
rocket = { version = "0.5.0", features = ["json"] }
actix-web = { version = "4.4.0" }
poem = { version = "1.3.59" }
poem-openapi = { version = "3.0.6" }
serde = { version = "1.0", features = ["derive"] }
actix-web-grants = { workspace = true }
rocket-grants = { workspace = true }
poem-grants = { workspace = true }
