[package]
name = "protect-endpoints-proc-macro"
version = "0.2.1"
description = "A proc-macro way to protect your endpoints"
readme = "../README.md"
keywords = ["protect", "endpoint", "authz", "security", "grants"]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
rocket = []
actix-web = []
poem = []

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0"
quote = "1"
syn = { version = "2.0", features = ["full", "derive", "extra-traits"] }

[dev-dependencies]
rocket = { version = "0.5.0", features = ["json"] }
actix-web = { version = "4.4.0" }
poem = { version = "2.0.0" }
poem-openapi = { version = "4.0.0" }
serde = { version = "1.0", features = ["derive"] }
actix-web-grants = { path = "../actix-web-grants" }
rocket-grants = { path = "../rocket-grants" }
poem-grants = { path = "../poem-grants" }
