[package]
name = "protect-endpoints-proc-macro"
version = "0.3.2"
description = "A proc-macro way to protect your endpoints"
readme = "../README.md"
keywords = ["protect", "endpoint", "authz", "security", "grants"]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
actix-web = []
axum = []
poem = []
rocket = []
salvo = []

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0"
quote = "1"
syn = { version = "2.0", features = ["full", "derive", "extra-traits"] }

[dev-dependencies]
actix-web = { version = "4.4.0" }
actix-web-grants = { path = "../actix-web-grants" }
poem = { version = "3.0.0" }
poem-grants = { path = "../poem-grants" }
poem-openapi = { version = "5.0.0" }
rocket = { version = "0.5.0", features = ["json"] }
rocket-grants = { path = "../rocket-grants" }
serde = { version = "1.0", features = ["derive"] }
protect-salvo = { path = "../protect-salvo" }
salvo = { version = "0.74.2" }
