[package]
name = "protect-axum"
version = "0.1.2"
description = "Authorization extension for `axum` to protect your endpoints"
readme = "README.md"
keywords = ["axum", "auth", "security", "grants", "permissions"]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "protect_axum"
path = "src/lib.rs"

[features]
default = ["macro-check"]
macro-check = ["protect-endpoints-proc-macro"]

[dependencies]
axum = { version = "0.7.5", default-features = false }
protect-endpoints-core = { workspace = true, features = ["tower"] }
protect-endpoints-proc-macro = { workspace = true, features = ["axum"], optional = true }
tower = { version = "0.5", default-features = false }

[dev-dependencies]
axum = { version = "0.7.2" }
chrono = "0.4.35"
http-body-util = "0.1.0"
jsonwebtoken = "9.1.0"
parse-display = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
