[package]
name = "protect-salvo"
version = "0.1.1"
description = "Authorization extension `salvo` to protect your endpoints"
readme = "README.md"
keywords = ["salvo", "auth", "security", "grants", "permissions"]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "protect_salvo"
path = "src/lib.rs"

[features]
default = ["macro-check"]
macro-check = ["protect-endpoints-proc-macro"]

[dependencies]
salvo = { version = "0.71.1", default-features = false, features = ["tower-compat"] }
protect-endpoints-core = { workspace = true, features = ["tower"] }
protect-endpoints-proc-macro = { workspace = true, features = ["salvo"], optional = true }
tower = { version = "0.4.13", default-features = false }

[dev-dependencies]
chrono = "0.4.35"
http-body-util = "0.1.0"
jsonwebtoken = "9.1.0"
parse-display = "0.10.0"
salvo = { version = "0.71.1", default-features = false, features = ["test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
