[package]
name = "enum-role"
version = "0.1.0"
description = "Example using actix-web-grants with actix-web-httpauth via JWT authorization"
authors = ["DDtKey <ddttkey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.18" }
actix-web-grants = { path = "../../" }
serde = {version = "1.0", features = ["derive"] }
chrono = "0.4.19"
