[package]
name = "enum-role"
version = "0.1.0"
description = "Example using rocket-grants with enum role type"
authors = ["DDtKey <ddttkey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket-grants = { path = "../../" }
tokio = "1"
