[package]
name = "jwt-auth"
version = "0.1.0"
description = "Example using poem-grants with JWT auth middleware"
authors = ["DDtKey <ddttkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
jsonwebtoken = "7"
poem = "1"
poem-grants = { path = "../../" }
serde = {version = "1.0", features = ["derive"] }
tokio = "1"
