[package]
name = "jwt-auth"
version = "0.1.0"
description = "Example using rocket-grants with JWT auth"
authors = ["DDtKey <ddttkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
jsonwebtoken = "7"
rocket = { version = "0.5.0", features = ["json"] }
rocket-grants = { path = "../../../rocket-grants" }
serde = {version = "1.0", features = ["derive"] }
tokio = "1.34.0"
